--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,6 @@
   </head>
   <body>
     <div id="root"/>
-    <script>
-
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
   </body>
 </html>
